--- a/GITHUBTest/MainWindow.xaml
+++ b/GITHUBTest/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Button x:Name="button" Content="To" HorizontalAlignment="Left" Margin="40,47,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Jest" HorizontalAlignment="Left" Margin="145,49,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </Window>
